@@ -12,6 +12,8 @@ class Road;
 void joinRoads(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
 void splitRoads(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
 void breakRoads(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
+bool canCreateJunction(PropertiesDock* theDock);
+bool createJunction(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock, bool doIt=true);
 void reversePoints(MapDocument* theDocument, CommandList* theList, Road* R);
 void alignNodes(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
 void mergeNodes(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
